@@ -27,6 +27,7 @@ SOFTWARE_CENTER_USE_BUILTIN_LOGIN - use built-in login instead of ubuntu-sso-cli
 SOFTWARE_CENTER_APPDETAILS_WEBKIT - use the webkit appdetails instead of gtk
 APPVIEW_DEBUG_TERMS - show debug output for the terms in a search
 SOFTWARE_CENTER_BUY_HOST - use a alternative hosts to query for pay software
+SOFTWARE_CENTER_AGENT_INCLUDE_APPROVED_BUT_UNPUBLISHED - show not yet QA apps available from the agent
 
 == applications.menu ==
 
