@@ -366,7 +366,8 @@ def add_from_purchased_but_needs_reinstall_data(purchased_but_may_need_reinstall
     query = xapian.Query("AH"+PURCHASED_NEEDS_REINSTALL_MAGIC_CHANNEL_NAME)
     return query
 
-def update_from_software_center_agent(db, cache, ignore_etag=False):
+def update_from_software_center_agent(db, cache, ignore_etag=False,
+                                      include_approved_but_unpublished=False):
     """ update index based on the software-center-agent data """
     def _available_cb(sca, available):
         # print "available: ", available
@@ -382,7 +383,7 @@ def update_from_software_center_agent(db, cache, ignore_etag=False):
     sca.connect("available", _available_cb)
     sca.connect("error", _error_cb)
     sca.available = None
-    sca.query_available()
+    sca.query_available(include_approved_but_unpublished)
     context = glib.main_context_default()
     while sca.available is None:
         while context.pending():
